--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,146 @@
    ],
    "source": [
     "test = get_prediction(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in the save file, so the model was *not* compiled. Compile it manually.\n",
+      "1/1 [==============================] - 1s 1s/step\n",
+      "[[4.3068860e-10 9.9999988e-01 5.9396151e-12 1.3324113e-07]]\n",
+      "1/1 [==============================] - 0s 62ms/step\n",
+      "[[5.9727345e-06 9.7548819e-01 9.6223295e-05 2.4409628e-02]]\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "[[1.07383596e-04 9.91263390e-01 4.17836600e-05 8.58746469e-03]]\n",
+      "1/1 [==============================] - 0s 48ms/step\n",
+      "[[1.5289486e-04 4.7977543e-01 2.8021718e-04 5.1979148e-01]]\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
+      "[[2.5197819e-06 8.0132335e-01 2.1565480e-08 1.9867407e-01]]\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "[[6.3093772e-05 1.1571032e-01 1.5775779e-06 8.8422501e-01]]\n",
+      "1/1 [==============================] - 0s 46ms/step\n",
+      "[[6.0896000e-06 5.4966789e-02 3.2963592e-06 9.4502383e-01]]\n",
+      "1/1 [==============================] - 0s 62ms/step\n",
+      "[[3.2626572e-06 9.4668019e-01 1.8910771e-07 5.3316288e-02]]\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "[[1.5956722e-06 9.2291367e-01 6.1730980e-09 7.7084675e-02]]\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "[[9.2967980e-09 9.9993634e-01 2.5522127e-09 6.3692882e-05]]\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "[[3.2578017e-05 7.8734785e-01 6.5198238e-04 2.1196768e-01]]\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "[[9.3419119e-05 9.9457425e-01 2.6063784e-03 2.7260352e-03]]\n",
+      "1/1 [==============================] - 0s 49ms/step\n",
+      "[[9.1067859e-06 9.9977535e-01 1.8726256e-04 2.8293216e-05]]\n",
+      "1/1 [==============================] - 0s 58ms/step\n",
+      "[[9.1067859e-06 9.9977535e-01 1.8726256e-04 2.8293216e-05]]\n",
+      "1/1 [==============================] - 0s 55ms/step\n",
+      "[[6.6842055e-08 9.9999964e-01 3.1416096e-07 2.9578439e-08]]\n",
+      "1/1 [==============================] - 0s 52ms/step\n",
+      "[[1.9561512e-04 9.9923205e-01 5.7166460e-04 7.4768309e-07]]\n",
+      "1/1 [==============================] - 0s 58ms/step\n",
+      "[[1.3713883e-05 9.9998248e-01 3.0110782e-06 7.7712133e-07]]\n",
+      "1/1 [==============================] - 0s 54ms/step\n",
+      "[[6.0268094e-06 9.9998283e-01 1.0842476e-05 2.8761758e-07]]\n",
+      "1/1 [==============================] - 0s 61ms/step\n",
+      "[[8.3140103e-06 9.9781030e-01 2.1808723e-03 4.4676906e-07]]\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "[[6.0591123e-07 9.9999213e-01 7.1413847e-06 1.7255759e-07]]\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "[[4.2093325e-05 9.9939191e-01 5.6575518e-04 2.8565822e-07]]\n",
+      "1/1 [==============================] - 0s 54ms/step\n",
+      "[[1.1475155e-05 9.9996638e-01 2.2116617e-05 8.0702905e-10]]\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "[[1.1475155e-05 9.9996638e-01 2.2116617e-05 8.0702905e-10]]\n",
+      "1/1 [==============================] - 0s 63ms/step\n",
+      "[[2.7432907e-04 9.9933761e-01 1.5897024e-04 2.2908290e-04]]\n",
+      "1/1 [==============================] - 0s 52ms/step\n",
+      "[[1.9619094e-06 9.9989855e-01 5.1230398e-09 9.9467892e-05]]\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "[[1.3065188e-05 9.9998510e-01 1.8359782e-06 3.3704236e-08]]\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "[[3.0088902e-05 7.0728817e-08 9.9996555e-01 4.3800619e-06]]\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
+      "[[9.2627829e-08 4.2455064e-11 8.0720347e-04 9.9919266e-01]]\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "[[2.6291627e-08 7.5063402e-14 9.5581913e-01 4.4180889e-02]]\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "[[1.5461991e-03 2.5377159e-10 9.2606920e-01 7.2384559e-02]]\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "[[9.6980077e-01 1.7387724e-06 3.2950997e-05 3.0164538e-02]]\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "[[9.3821955e-01 1.5632063e-06 5.1184463e-05 6.1727621e-02]]\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "[[9.8919123e-01 7.5257381e-06 2.0104228e-05 1.0781132e-02]]\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "[[9.8919123e-01 7.5257381e-06 2.0104228e-05 1.0781132e-02]]\n",
+      "1/1 [==============================] - 0s 46ms/step\n",
+      "[[9.9252194e-01 6.2937779e-06 7.4714310e-03 3.6349994e-07]]\n",
+      "1/1 [==============================] - 0s 43ms/step\n",
+      "[[9.9844569e-01 3.2275293e-05 1.4773383e-03 4.4679404e-05]]\n",
+      "1/1 [==============================] - 0s 49ms/step\n",
+      "[[9.9809390e-01 1.2930004e-05 1.6367068e-03 2.5643769e-04]]\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
+      "[[9.9521363e-01 1.5910536e-04 2.1604633e-06 4.6251020e-03]]\n",
+      "1/1 [==============================] - 0s 56ms/step\n",
+      "[[8.4250796e-01 1.5575200e-05 2.3096727e-04 1.5724550e-01]]\n",
+      "1/1 [==============================] - 0s 54ms/step\n",
+      "[[9.9344289e-01 1.8256568e-04 6.6979960e-06 6.3678003e-03]]\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
+      "[[6.0457999e-01 3.0848386e-03 3.6879965e-06 3.9233148e-01]]\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "[[6.6204512e-01 5.5940397e-04 1.2972275e-03 3.3609825e-01]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.6204512e-01, 5.5940397e-04, 1.2972275e-03, 3.3609825e-01]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from keras.models import load_model\n",
+    "import numpy as np\n",
+    "\n",
+    "def camera():\n",
+    "    model = load_model('keras_model.h5')\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    data = np.ndarray(shape=(1, 224, 224, 3), dtype=np.float32)\n",
+    "\n",
+    "    while True: \n",
+    "        ret, frame = cap.read()\n",
+    "        resized_frame = cv2.resize(frame, (224, 224), interpolation = cv2.INTER_AREA)\n",
+    "        image_np = np.array(resized_frame)\n",
+    "        normalized_image = (image_np.astype(np.float32) / 127.0) - 1 # Normalize the image\n",
+    "        data[0] = normalized_image\n",
+    "        prediction = model.predict(data)\n",
+    "        cv2.imshow('frame', frame)\n",
+    "        # Press q to close the window\n",
+    "        print(prediction)\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "\n",
+    "    # After the loop release the cap object\n",
+    "    cap.release()\n",
+    "    # Destroy all the windows\n",
+    "    cv2.destroyAllWindows() \n",
+    "    return prediction  \n",
+    "\n",
+    "camera()    "
    ]
   },
   {
@@ -165,10 +305,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a static method.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    \n",
+    "    def static_method():\n",
+    "        print(\"This is a static method.\")\n",
+    "        \n",
+    "MyClass.static_method()  # Calling the static method on the class itself\n"
+   ]
   }
  ],
  "metadata": {
